--- a/properties_single.html
+++ b/properties_single.html
@@ -221,39 +221,31 @@
                     </div>
                   </div>
                 </div>
-                <div id="area" class="amenities_block_item amenities_block_thrid">
-                  <div class="amenities_block_thrid_wrap">
-                    <div class="amenities_block_thrid_wrap_left">
-                      <div class="amenities_block_thrid_wrap_left_item">
-                        <span>water Source</span>
-                        <p>For Sale</p>
-                      </div>
-                      <div class="amenities_block_thrid_wrap_left_item">
-                        <span>Utilities</span>
-                        <p>3,379 SQ.FT.</p>
-                      </div>
-                      <div class="amenities_block_thrid_wrap_left_item">
-                        <span>Roof</span>
-                        <p>23-1057</p>
-                      </div>
-                      <div class="amenities_block_thrid_wrap_left_item">
-                        <span>Lot Features</span>
-                        <p>RESIDENTIAL</p>
-                      </div>
+                <div id="area" class="amenities_block_item amenities_block_second">
+                  <div class="amenities_block_second_wrap">
+                    <div class="amenities_block_second_wrap_item">
+                      <span>water Source</span>
+                      <p>SB Wtr</p>
                     </div>
-                    <div class="amenities_block_thrid_wrap_right">
-                      <div class="amenities_block_thrid_wrap_right_item">
-                        <span>Parking</span>
-                        <p>Paved</p>
-                      </div>
-                      <div class="amenities_block_thrid_wrap_right_item">
-                        <span>Utilities</span>
-                        <p>Mountain(s), Islands, Coastline, Ocean, City, Panoramic</p>
-                      </div>
-                      <div class="amenities_block_thrid_wrap_right_item">
-                        <span>Parking</span>
-                        <p>Paved</p>
-                      </div>
+                    <div class="amenities_block_second_wrap_item">
+                      <span>Utilities</span>
+                      <p>Cable Available, Underground Utilities</p>
+                    </div>
+                    <div class="amenities_block_second_wrap_item">
+                      <span>Parking</span>
+                      <p>Paved</p>
+                    </div>
+                    <div class="amenities_block_second_wrap_item">
+                      <span>Utilities</span>
+                      <p>Cable Available, Underground Utilities</p>
+                    </div>
+                    <div class="amenities_block_second_wrap_item">
+                      <span>Roof</span>
+                      <p>Other</p>
+                    </div>
+                    <div class="amenities_block_second_wrap_item">
+                      <span>Lot Features</span>
+                      <p>Level</p>
                     </div>
                   </div>
                 </div>
