--- a/index.html
+++ b/index.html
@@ -15,27 +15,24 @@
     <header class="header">
       <div class="container">
         <div class="header_block">
-          <a class="header_block_logo" href="#">
+          <a class="header_block_logo" href="https://zudikhin.github.io/casaverse/">
             <img src="img/header/logo.svg" alt="">
           </a>
           <ul>
             <li class="current-menu-item">
-              <a href="#">Home</a>
+              <a href="https://zudikhin.github.io/casaverse/">Home</a>
             </li>
             <li>
-              <a href="#">About Us</a>
+              <a href="https://zudikhin.github.io/casaverse/about.html">About Us</a>
             </li>
             <li>
-              <a href="#">Properties</a>
+              <a href="https://zudikhin.github.io/casaverse/properties.html">Properties</a>
             </li>
             <li>
-              <a href="#">Projects</a>
+              <a href="https://zudikhin.github.io/casaverse/neighborhoods.html">Neighborhoods</a>
             </li>
             <li>
-              <a href="#">Neighborhoods</a>
-            </li>
-            <li>
-              <a href="#">Blog</a>
+              <a href="https://zudikhin.github.io/casaverse/blog.html">Blog</a>
             </li>
           </ul>
           <div class="header_block_btn">
@@ -44,7 +41,7 @@
             <span></span>
           </div>
           <div class="header_block_right">
-            <a href="#">
+            <a href="https://zudikhin.github.io/casaverse/contacts.html">
               <span>Contact Us</span>
             </a>
           </div>
@@ -53,22 +50,19 @@
           <div class="header_drop_left">
             <ul>
               <li class="current-menu-item">
-                <a href="#">Home</a>
+                <a href="https://zudikhin.github.io/casaverse/">Home</a>
               </li>
               <li>
-                <a href="#">About Us</a>
+                <a href="https://zudikhin.github.io/casaverse/about.html">About Us</a>
               </li>
               <li>
-                <a href="#">Properties</a>
+                <a href="https://zudikhin.github.io/casaverse/properties.html">Properties</a>
               </li>
               <li>
-                <a href="#">Projects</a>
+                <a href="https://zudikhin.github.io/casaverse/neighborhoods.html">Neighborhoods</a>
               </li>
               <li>
-                <a href="#">Neighborhoods</a>
-              </li>
-              <li>
-                <a href="#">Blog</a>
+                <a href="https://zudikhin.github.io/casaverse/blog.html">Blog</a>
               </li>
             </ul>
           </div>
@@ -90,7 +84,7 @@
               </svg>
             </div>
             <div class="main_block_text_bottom">
-              <a href="#">
+              <a href="https://zudikhin.github.io/casaverse/properties.html">
                 <span>View Properties</span>
               </a>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing.</p>
@@ -112,7 +106,14 @@
           <div class="about_block_left">
             <div class="about_block_left_wrap">
               <img class="mob" src="img/about/about_mob.svg" alt="">
-              <img class="desk" src="img/about/about_desk.svg" alt="">
+              <div id="featAbout" class="about_block_left_wrap_desk">
+                <img class="one parallaxed" src="img/about/about_desk_one.svg" alt="">
+                <img class="two parallaxed" src="img/about/about_desk_two.svg" alt="">
+                <img class="three parallaxed" src="img/about/about_desk_three.svg" alt="">
+                <img class="four parallaxed" src="img/about/about_desk_four.svg" alt="">
+                <img class="five parallaxed" src="img/about/about_desk_five.svg" alt="">
+                <img class="six parallaxed" src="img/about/about_desk_six.svg" alt="">
+              </div>
             </div>
           </div>
           <div class="about_block_right">
@@ -122,7 +123,7 @@
               <img src="img/about/feature.svg" alt="">
               <div class="about_block_right_bot_right">
                 <p>From helping you scout out the finest properties on the market - whether it be a cozy spot to call home, or one with excellent resale value - to getting the best deals when it comes to all your other investments, we make sure your Dubai experience is just that: an experience. So come join us today at Casaverse and take 360-degree tour of high-quality property and investing options that our city offers!</p>
-                <a href="#">
+                <a href="https://zudikhin.github.io/casaverse/contacts.html">
                   <span>Meet The Team</span>
                 </a>
               </div>
@@ -148,7 +149,7 @@
       </div>
       <div class="featured_slider">
 
-        <a class="featured_slider_item" href="#">
+        <a class="featured_slider_item" href="https://zudikhin.github.io/casaverse/properties_single.html">
           <img class="featured_slider_item_main" src="img/featured/1.png" alt="">
           <div class="featured_slider_item_text">
             <div class="featured_slider_item_text_top">
@@ -174,7 +175,7 @@
           </div>
         </a>
 
-        <a class="featured_slider_item" href="#">
+        <a class="featured_slider_item" href="https://zudikhin.github.io/casaverse/properties_single.html">
           <img class="featured_slider_item_main" src="img/featured/2.png" alt="">
           <div class="featured_slider_item_text">
             <div class="featured_slider_item_text_top">
@@ -200,7 +201,7 @@
           </div>
         </a>
 
-        <a class="featured_slider_item" href="#">
+        <a class="featured_slider_item" href="https://zudikhin.github.io/casaverse/properties_single.html">
           <img class="featured_slider_item_main" src="img/featured/3.png" alt="">
           <div class="featured_slider_item_text">
             <div class="featured_slider_item_text_top">
@@ -226,7 +227,7 @@
           </div>
         </a>
 
-        <a class="featured_slider_item" href="#">
+        <a class="featured_slider_item" href="https://zudikhin.github.io/casaverse/properties_single.html">
           <img class="featured_slider_item_main" src="img/featured/4.png" alt="">
           <div class="featured_slider_item_text">
             <div class="featured_slider_item_text_top">
@@ -252,7 +253,7 @@
           </div>
         </a>
 
-        <a class="featured_slider_item" href="#">
+        <a class="featured_slider_item" href="https://zudikhin.github.io/casaverse/properties_single.html">
           <img class="featured_slider_item_main" src="img/featured/1.png" alt="">
           <div class="featured_slider_item_text">
             <div class="featured_slider_item_text_top">
@@ -278,7 +279,7 @@
           </div>
         </a>
 
-        <a class="featured_slider_item" href="#">
+        <a class="featured_slider_item" href="https://zudikhin.github.io/casaverse/properties_single.html">
           <img class="featured_slider_item_main" src="img/featured/2.png" alt="">
           <div class="featured_slider_item_text">
             <div class="featured_slider_item_text_top">
@@ -304,7 +305,7 @@
           </div>
         </a>
 
-        <a class="featured_slider_item" href="#">
+        <a class="featured_slider_item" href="https://zudikhin.github.io/casaverse/properties_single.html">
           <img class="featured_slider_item_main" src="img/featured/3.png" alt="">
           <div class="featured_slider_item_text">
             <div class="featured_slider_item_text_top">
@@ -330,7 +331,7 @@
           </div>
         </a>
 
-        <a class="featured_slider_item" href="#">
+        <a class="featured_slider_item" href="https://zudikhin.github.io/casaverse/properties_single.html">
           <img class="featured_slider_item_main" src="img/featured/4.png" alt="">
           <div class="featured_slider_item_text">
             <div class="featured_slider_item_text_top">
@@ -358,7 +359,7 @@
 
       </div>
       <div class="container">
-        <a class="featured_all" href="#">
+        <a class="featured_all" href="https://zudikhin.github.io/casaverse/properties.html">
           <span>View All</span>
         </a>
       </div>
@@ -371,7 +372,7 @@
       </div>
       <div class="neighborhoods_wrap">
         <div class="neighborhoods_slider">
-          <a class="neighborhoods_slider_item" href="#">
+          <a class="neighborhoods_slider_item" href="https://zudikhin.github.io/casaverse/neighborhoods_single.html">
             <img class="neighborhoods_slider_item_main" src="img/neighborhoods/1.jpg" alt="">
             <div class="neighborhoods_slider_item_text">
               <p>Dubai <br> Marina</p>
@@ -380,7 +381,7 @@
               </svg>
             </div>
           </a>
-          <a class="neighborhoods_slider_item" href="#">
+          <a class="neighborhoods_slider_item" href="https://zudikhin.github.io/casaverse/neighborhoods_single.html">
             <img class="neighborhoods_slider_item_main" src="img/neighborhoods/2.jpg" alt="">
             <div class="neighborhoods_slider_item_text">
               <p>Arabian <br>Ranches</p>
@@ -391,7 +392,7 @@
 
             </div>
           </a>
-          <a class="neighborhoods_slider_item" href="#">
+          <a class="neighborhoods_slider_item" href="https://zudikhin.github.io/casaverse/neighborhoods_single.html">
             <img class="neighborhoods_slider_item_main" src="img/neighborhoods/3.jpg" alt="">
             <div class="neighborhoods_slider_item_text">
               <p>Palm <br>Jumeirah</p>
@@ -400,7 +401,7 @@
               </svg>
             </div>
           </a>
-          <a class="neighborhoods_slider_item" href="#">
+          <a class="neighborhoods_slider_item" href="https://zudikhin.github.io/casaverse/neighborhoods_single.html">
             <img class="neighborhoods_slider_item_main" src="img/neighborhoods/4.jpg" alt="">
             <div class="neighborhoods_slider_item_text">
               <p>DAMAC Lagoons</p>
@@ -409,7 +410,7 @@
               </svg>
             </div>
           </a>
-          <a class="neighborhoods_slider_item" href="#">
+          <a class="neighborhoods_slider_item" href="https://zudikhin.github.io/casaverse/neighborhoods_single.html">
             <img class="neighborhoods_slider_item_main" src="img/neighborhoods/1.jpg" alt="">
             <div class="neighborhoods_slider_item_text">
               <p>Dubai <br> Marina</p>
@@ -418,7 +419,7 @@
               </svg>
             </div>
           </a>
-          <a class="neighborhoods_slider_item" href="#">
+          <a class="neighborhoods_slider_item" href="https://zudikhin.github.io/casaverse/neighborhoods_single.html">
             <img class="neighborhoods_slider_item_main" src="img/neighborhoods/2.jpg" alt="">
             <div class="neighborhoods_slider_item_text">
               <p>Arabian <br>Ranches</p>
@@ -427,7 +428,7 @@
               </svg>
             </div>
           </a>
-          <a class="neighborhoods_slider_item" href="#">
+          <a class="neighborhoods_slider_item" href="https://zudikhin.github.io/casaverse/neighborhoods_single.html">
             <img class="neighborhoods_slider_item_main" src="img/neighborhoods/3.jpg" alt="">
             <div class="neighborhoods_slider_item_text">
               <p>Palm <br>Jumeirah</p>
@@ -436,7 +437,7 @@
               </svg>
             </div>
           </a>
-          <a class="neighborhoods_slider_item" href="#">
+          <a class="neighborhoods_slider_item" href="https://zudikhin.github.io/casaverse/neighborhoods_single.html">
             <img class="neighborhoods_slider_item_main" src="img/neighborhoods/4.jpg" alt="">
             <div class="neighborhoods_slider_item_text">
               <p>DAMAC Lagoons</p>
@@ -451,7 +452,7 @@
         </div>
       </div>
       <div class="container">
-        <a class="neighborhoods_all" href="#">
+        <a class="neighborhoods_all" href="https://zudikhin.github.io/casaverse/neighborhoods.html">
           <span>View All</span>
         </a>
       </div>
@@ -670,7 +671,7 @@
                 </div>
               </a>
             </div>
-            <a class="blog_block_wrap_link" href="#">
+            <a class="blog_block_wrap_link" href="https://zudikhin.github.io/casaverse/blog.html">
               <span>View All</span>
             </a>
           </div>
@@ -715,7 +716,7 @@
       <div class="container">
         <div class="footer_block">
           <div class="footer_block_left">
-            <a href="#">
+            <a href="https://zudikhin.github.io/casaverse">
               <img src="img/footer/logo.svg" alt="">
             </a>
             <p>Casaverse is dedicated to representing properties of unparalleled distinction in Dubai. With a deep understanding of the local market and years of experience, we have been able to cater to the unique needs of our clients and help them find their dream properties. Whether you're looking to buy, sell, or rent a property, Casaverse is here to help you every step of the way.</p>
@@ -778,14 +779,21 @@
 </html>
 
 <script>
+  var b = document.getElementById("featAbout"); 
 
-let bg = document.querySelector('.about_block_left_wrap');
-window.addEventListener('mousemove', function(e) {
-  let x = e.clientX / window.innerWidth;
-  let y = e.clientY / window.innerHeight;  
-  bg.style.transform = 'translate(-' + x * 50 + 'px, -' + y * 50 + 'px)';
-});
+  b.addEventListener("mousemove", function(event) {
+    parallaxed(event);
+  });
 
+  function parallaxed(e) {
+    var amountMovedX = (e.clientX * -0.3 / 8);
+    var amountMovedY = (e.clientY * -0.3 / 8);
+    var x = document.getElementsByClassName("parallaxed");
+    var i;
+    for (i = 0; i < x.length; i++) {
+      x[i].style.transform='translate(' + amountMovedX + 'px,' + amountMovedY + 'px)'
+    }
+  }
 </script>
 
 <script>
