--- a/neighborhoods.html
+++ b/neighborhoods.html
@@ -15,27 +15,24 @@
     <header class="header">
       <div class="container">
         <div class="header_block">
-          <a class="header_block_logo" href="#">
+          <a class="header_block_logo" href="https://zudikhin.github.io/casaverse/">
             <img src="img/header/logo.svg" alt="">
           </a>
           <ul>
             <li class="current-menu-item">
-              <a href="#">Home</a>
+              <a href="https://zudikhin.github.io/casaverse/">Home</a>
             </li>
             <li>
-              <a href="#">About Us</a>
+              <a href="https://zudikhin.github.io/casaverse/about.html">About Us</a>
             </li>
             <li>
-              <a href="#">Properties</a>
+              <a href="https://zudikhin.github.io/casaverse/properties.html">Properties</a>
             </li>
             <li>
-              <a href="#">Projects</a>
+              <a href="https://zudikhin.github.io/casaverse/neighborhoods.html">Neighborhoods</a>
             </li>
             <li>
-              <a href="#">Neighborhoods</a>
-            </li>
-            <li>
-              <a href="#">Blog</a>
+              <a href="https://zudikhin.github.io/casaverse/blog.html">Blog</a>
             </li>
           </ul>
           <div class="header_block_btn">
@@ -44,7 +41,7 @@
             <span></span>
           </div>
           <div class="header_block_right">
-            <a href="#">
+            <a href="https://zudikhin.github.io/casaverse/contacts.html">
               <span>Contact Us</span>
             </a>
           </div>
@@ -53,22 +50,19 @@
           <div class="header_drop_left">
             <ul>
               <li class="current-menu-item">
-                <a href="#">Home</a>
+                <a href="https://zudikhin.github.io/casaverse/">Home</a>
               </li>
               <li>
-                <a href="#">About Us</a>
+                <a href="https://zudikhin.github.io/casaverse/about.html">About Us</a>
               </li>
               <li>
-                <a href="#">Properties</a>
+                <a href="https://zudikhin.github.io/casaverse/properties.html">Properties</a>
               </li>
               <li>
-                <a href="#">Projects</a>
+                <a href="https://zudikhin.github.io/casaverse/neighborhoods.html">Neighborhoods</a>
               </li>
               <li>
-                <a href="#">Neighborhoods</a>
-              </li>
-              <li>
-                <a href="#">Blog</a>
+                <a href="https://zudikhin.github.io/casaverse/blog.html">Blog</a>
               </li>
             </ul>
           </div>
@@ -93,7 +87,7 @@
       <div class="container">
         <div class="neighborhoods_page_block">
 
-          <a class="neighborhoods_page_block_item anime" href="#">
+          <a class="neighborhoods_page_block_item anime" href="https://zudikhin.github.io/casaverse/neighborhoods_single.html">
             <div class="neighborhoods_page_block_item_title">
               <h3>Dubai <br> Marina</h3>
               <svg class="one_feature_animation" width="134" height="68" viewBox="0 0 134 68" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -110,11 +104,11 @@
             <img class="neighborhoods_page_block_item_main" src="img/neighborhoods_page/1.jpg" alt="">
           </a>
 
-          <a class="neighborhoods_page_block_item anime" href="#">
+          <a class="neighborhoods_page_block_item anime" href="https://zudikhin.github.io/casaverse/neighborhoods_single.html">
             <div class="neighborhoods_page_block_item_title">
               <h3>Arabian <br> Ranches</h3>
               <svg class="two_feature_animation" width="186" height="100" viewBox="0 0 186 100" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M185 87.5043C185.552 87.5043 186 87.952 186 88.5043C186 89.0566 185.552 89.5043 185 89.5043V87.5043ZM1.02142 61.9152L2.02097 61.885L1.02142 61.9152ZM183.19 49.3203H184.19H183.19ZM185 89.5043C166.04 89.5043 145.153 90.3998 124.429 91.1056C103.719 91.8109 83.176 92.3264 64.9593 91.5594C46.7635 90.7933 30.7857 88.7453 19.251 84.2714C7.69646 79.7899 0.348679 72.7542 0.0218811 61.9454L2.02097 61.885C2.31299 71.5436 8.78079 78.0653 19.9743 82.4068C31.1877 86.756 46.8904 88.7969 65.0434 89.5612C83.1755 90.3246 103.65 89.8121 124.361 89.1068C145.057 88.402 165.995 87.5043 185 87.5043V89.5043ZM0.0218811 61.9454C-0.569138 42.3973 10.835 27.4827 27.9998 17.2329C45.1502 6.99158 68.1664 1.32 91.1927 0.204808C114.218 -0.910355 137.377 2.52468 154.823 10.6157C172.269 18.7072 184.19 31.5677 184.19 49.3203L182.19 49.3203C182.19 32.655 171.052 20.3474 153.981 12.4301C136.91 4.51237 114.094 1.09801 91.2895 2.20247C68.4854 3.3069 45.8152 8.92396 29.0252 18.95C12.2495 28.9675 1.45903 43.2988 2.02097 61.885L0.0218811 61.9454ZM184.19 49.3203C184.19 61.9518 181.099 71.503 175.921 78.6978C170.746 85.8876 163.547 90.6413 155.47 93.7861C139.368 100.055 119.568 100 104.788 100V98C119.657 98 139.057 98.0302 154.744 91.9224C162.562 88.8786 169.404 84.328 174.297 77.5294C179.187 70.7358 182.19 61.6142 182.19 49.3203L184.19 49.3203Z" fill="white"/>
+                <path d="M185 88.5043C109.071 88.5043 2.25906 102.85 1.02143 61.9152C-1.28451 -14.3534 183.19 -19.5154 183.19 49.3203C183.19 99.1712 134.436 99 104.788 99" stroke="white" stroke-width="2" stroke-linecap="round"/>
               </svg>
             </div>
             <div class="neighborhoods_page_block_item_text">
@@ -127,7 +121,7 @@
             <img class="neighborhoods_page_block_item_main" src="img/neighborhoods_page/2.jpg" alt="">
           </a>
 
-          <a class="neighborhoods_page_block_item anime" href="#">
+          <a class="neighborhoods_page_block_item anime" href="https://zudikhin.github.io/casaverse/neighborhoods_single.html">
             <div class="neighborhoods_page_block_item_title">
               <h3>Palm <br>Jumeirah</h3>
               <svg class="three_feature_animation" width="144" height="9" viewBox="0 0 144 9" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -144,7 +138,7 @@
             <img class="neighborhoods_page_block_item_main" src="img/neighborhoods_page/3.jpg" alt="">
           </a>
 
-          <a class="neighborhoods_page_block_item anime" href="#">
+          <a class="neighborhoods_page_block_item anime" href="https://zudikhin.github.io/casaverse/neighborhoods_single.html">
             <div class="neighborhoods_page_block_item_title">
               <h3>DAMAC <br>Lagoons</h3>
               <svg class="four_feature_animation" width="144" height="9" viewBox="0 0 144 9" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -161,7 +155,7 @@
             <img class="neighborhoods_page_block_item_main" src="img/neighborhoods_page/4.jpg" alt="">
           </a>
 
-          <a class="neighborhoods_page_block_item anime" href="#">
+          <a class="neighborhoods_page_block_item anime" href="https://zudikhin.github.io/casaverse/neighborhoods_single.html">
             <div class="neighborhoods_page_block_item_title">
               <h3>Canal <br>Heights</h3>
               <svg class="five_feature_animation" width="129" height="90" viewBox="0 0 129 90" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -178,7 +172,7 @@
             <img class="neighborhoods_page_block_item_main" src="img/neighborhoods_page/5.jpg" alt="">
           </a>
 
-          <a class="neighborhoods_page_block_item anime" href="#">
+          <a class="neighborhoods_page_block_item anime" href="https://zudikhin.github.io/casaverse/neighborhoods_single.html">
             <div class="neighborhoods_page_block_item_title">
               <h3>District <br>One</h3>
               <svg class="three_feature_animation" width="144" height="9" viewBox="0 0 144 9" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -195,11 +189,11 @@
             <img class="neighborhoods_page_block_item_main" src="img/neighborhoods_page/6.jpg" alt="">
           </a>
 
-          <a class="neighborhoods_page_block_item anime" href="#">
+          <a class="neighborhoods_page_block_item anime" href="https://zudikhin.github.io/casaverse/neighborhoods_single.html">
             <div class="neighborhoods_page_block_item_title">
               <h3>Dubai <br>Harbour</h3>
               <svg class="two_feature_animation" width="186" height="100" viewBox="0 0 186 100" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M185 87.5043C185.552 87.5043 186 87.952 186 88.5043C186 89.0566 185.552 89.5043 185 89.5043V87.5043ZM1.02142 61.9152L2.02097 61.885L1.02142 61.9152ZM183.19 49.3203H184.19H183.19ZM185 89.5043C166.04 89.5043 145.153 90.3998 124.429 91.1056C103.719 91.8109 83.176 92.3264 64.9593 91.5594C46.7635 90.7933 30.7857 88.7453 19.251 84.2714C7.69646 79.7899 0.348679 72.7542 0.0218811 61.9454L2.02097 61.885C2.31299 71.5436 8.78079 78.0653 19.9743 82.4068C31.1877 86.756 46.8904 88.7969 65.0434 89.5612C83.1755 90.3246 103.65 89.8121 124.361 89.1068C145.057 88.402 165.995 87.5043 185 87.5043V89.5043ZM0.0218811 61.9454C-0.569138 42.3973 10.835 27.4827 27.9998 17.2329C45.1502 6.99158 68.1664 1.32 91.1927 0.204808C114.218 -0.910355 137.377 2.52468 154.823 10.6157C172.269 18.7072 184.19 31.5677 184.19 49.3203L182.19 49.3203C182.19 32.655 171.052 20.3474 153.981 12.4301C136.91 4.51237 114.094 1.09801 91.2895 2.20247C68.4854 3.3069 45.8152 8.92396 29.0252 18.95C12.2495 28.9675 1.45903 43.2988 2.02097 61.885L0.0218811 61.9454ZM184.19 49.3203C184.19 61.9518 181.099 71.503 175.921 78.6978C170.746 85.8876 163.547 90.6413 155.47 93.7861C139.368 100.055 119.568 100 104.788 100V98C119.657 98 139.057 98.0302 154.744 91.9224C162.562 88.8786 169.404 84.328 174.297 77.5294C179.187 70.7358 182.19 61.6142 182.19 49.3203L184.19 49.3203Z" fill="white"/>
+                <path d="M185 88.5043C109.071 88.5043 2.25906 102.85 1.02143 61.9152C-1.28451 -14.3534 183.19 -19.5154 183.19 49.3203C183.19 99.1712 134.436 99 104.788 99" stroke="white" stroke-width="2" stroke-linecap="round"/>
               </svg>
             </div>
             <div class="neighborhoods_page_block_item_text">
@@ -212,7 +206,7 @@
             <img class="neighborhoods_page_block_item_main" src="img/neighborhoods_page/7.jpg" alt="">
           </a>
 
-          <a class="neighborhoods_page_block_item anime" href="#">
+          <a class="neighborhoods_page_block_item anime" href="https://zudikhin.github.io/casaverse/neighborhoods_single.html">
             <div class="neighborhoods_page_block_item_title">
               <h3>Downtown Burj <br> Khalifa</h3>
               <svg class="four_feature_animation" width="144" height="9" viewBox="0 0 144 9" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -238,7 +232,7 @@
         <div class="dream_block">
           <div class="dream_block_wrap">
             <h2>Find your <br> dream home</h2>
-            <a href="#">
+            <a href="https://zudikhin.github.io/casaverse/">
               <span>BROWSE HOME</span>
             </a>
             <img class="star_one" src="img/dream/1.svg" alt="">
@@ -253,7 +247,7 @@
       <div class="container">
         <div class="footer_block">
           <div class="footer_block_left">
-            <a href="#">
+            <a href="https://zudikhin.github.io/casaverse/">
               <img src="img/footer/logo.svg" alt="">
             </a>
             <p>Casaverse is dedicated to representing properties of unparalleled distinction in Dubai. With a deep understanding of the local market and years of experience, we have been able to cater to the unique needs of our clients and help them find their dream properties. Whether you're looking to buy, sell, or rent a property, Casaverse is here to help you every step of the way.</p>
