--- a/properties_single.html
+++ b/properties_single.html
@@ -20,22 +20,19 @@
           </a>
           <ul>
             <li class="current-menu-item">
-              <a href="#">Home</a>
+              <a href="https://zudikhin.github.io/casaverse/">Home</a>
             </li>
             <li>
-              <a href="#">About Us</a>
+              <a href="https://zudikhin.github.io/casaverse/about.html">About Us</a>
             </li>
             <li>
-              <a href="#">Properties</a>
+              <a href="https://zudikhin.github.io/casaverse/properties.html">Properties</a>
             </li>
             <li>
-              <a href="#">Projects</a>
+              <a href="https://zudikhin.github.io/casaverse/neighborhoods.html">Neighborhoods</a>
             </li>
             <li>
-              <a href="#">Neighborhoods</a>
-            </li>
-            <li>
-              <a href="#">Blog</a>
+              <a href="https://zudikhin.github.io/casaverse/blog.html">Blog</a>
             </li>
           </ul>
           <div class="header_block_btn">
@@ -44,7 +41,7 @@
             <span></span>
           </div>
           <div class="header_block_right">
-            <a href="#">
+            <a href="https://zudikhin.github.io/casaverse/contacts.html">
               <span>Contact Us</span>
             </a>
           </div>
@@ -53,22 +50,19 @@
           <div class="header_drop_left">
             <ul>
               <li class="current-menu-item">
-                <a href="#">Home</a>
+                <a href="https://zudikhin.github.io/casaverse/">Home</a>
               </li>
               <li>
-                <a href="#">About Us</a>
+                <a href="https://zudikhin.github.io/casaverse/about.html">About Us</a>
               </li>
               <li>
-                <a href="#">Properties</a>
+                <a href="https://zudikhin.github.io/casaverse/properties.html">Properties</a>
               </li>
               <li>
-                <a href="#">Projects</a>
+                <a href="https://zudikhin.github.io/casaverse/neighborhoods.html">Neighborhoods</a>
               </li>
               <li>
-                <a href="#">Neighborhoods</a>
-              </li>
-              <li>
-                <a href="#">Blog</a>
+                <a href="https://zudikhin.github.io/casaverse/blog.html">Blog</a>
               </li>
             </ul>
           </div>
@@ -124,7 +118,7 @@
                             <p>Year Built</p>
                         </div>
                         <div class="properties_single_info_right_list_item">
-                            <img src="img/properties_single/time.svg" alt="">
+                            <img src="img/properties_single/frame.svg" alt="">
                             <span>1.14 ACRES</span>
                             <p>Lot</p>
                         </div>
@@ -332,7 +326,7 @@
         <div class="container">
           <div class="footer_block">
             <div class="footer_block_left">
-              <a href="#">
+              <a href="https://zudikhin.github.io/casaverse/">
                 <img src="img/footer/logo.svg" alt="">
               </a>
               <p>Casaverse is dedicated to representing properties of unparalleled distinction in Dubai. With a deep understanding of the local market and years of experience, we have been able to cater to the unique needs of our clients and help them find their dream properties. Whether you're looking to buy, sell, or rent a property, Casaverse is here to help you every step of the way.</p>
