--- a/index.html
+++ b/index.html
@@ -701,7 +701,7 @@
               </svg>
             </div>
             
-            <a class="work_block_wrap_btn" href="#">
+            <a class="work_block_wrap_btn" href="https://zudikhin.github.io/casaverse/contacts.html">
               <span>Contact Us</span>
             </a>
             <img class="star_one" src="img/work/star_1.svg" alt="">
