--- a/properties.html
+++ b/properties.html
@@ -176,7 +176,7 @@
         </div>
         <div class="properties_block">
 
-          <a class="properties_block_item" href="#">
+          <a class="properties_block_item" href="https://zudikhin.github.io/casaverse/properties_single.html">
             <div class="properties_block_item_img">
               <img src="img/neighborhoods_single/1.png" alt="">
               <div class="properties_block_item_img_info">
@@ -229,7 +229,7 @@
             </div>
           </a>
 
-          <a class="properties_block_item" href="#">
+          <a class="properties_block_item" href="https://zudikhin.github.io/casaverse/properties_single.html">
             <div class="properties_block_item_img">
               <img src="img/neighborhoods_single/2.png" alt="">
               <div class="properties_block_item_img_info">
@@ -282,7 +282,7 @@
             </div>
           </a>
 
-          <a class="properties_block_item" href="#">
+          <a class="properties_block_item" href="https://zudikhin.github.io/casaverse/properties_single.html">
             <div class="properties_block_item_img">
               <img src="img/neighborhoods_single/3.png" alt="">
               <div class="properties_block_item_img_info">
@@ -335,7 +335,7 @@
             </div>
           </a>
 
-          <a class="properties_block_item" href="#">
+          <a class="properties_block_item" href="https://zudikhin.github.io/casaverse/properties_single.html">
             <div class="properties_block_item_img">
               <img src="img/neighborhoods_single/1.png" alt="">
               <div class="properties_block_item_img_info">
@@ -388,7 +388,7 @@
             </div>
           </a>
 
-          <a class="properties_block_item" href="#">
+          <a class="properties_block_item" href="https://zudikhin.github.io/casaverse/properties_single.html">
             <div class="properties_block_item_img">
               <img src="img/neighborhoods_single/2.png" alt="">
               <div class="properties_block_item_img_info">
@@ -441,7 +441,7 @@
             </div>
           </a>
 
-          <a class="properties_block_item" href="#">
+          <a class="properties_block_item" href="https://zudikhin.github.io/casaverse/properties_single.html">
             <div class="properties_block_item_img">
               <img src="img/neighborhoods_single/3.png" alt="">
               <div class="properties_block_item_img_info">
